--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           source_branch: main
           release_branch: release
-          built_asset_paths: ./*.css package-lock.json map assets/dist
+          built_asset_paths: ./*.css
           build_script: |
             npm ci
-            npm run build
+            npm run compile
