--- a/.github/workflows/release-develop.yml
+++ b/.github/workflows/release-develop.yml
@@ -25,7 +25,7 @@ jobs:
         uses: ./.github/actions/build-to-release-branch
         with:
           source_branch: develop
-          release_branch: develop-release
+          release_branch: release-develop
           built_asset_paths: ./*.css
           build_script: |
             npm ci
