--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "automattic/vipwpcs": "^3.0",
+        "staabm/annotate-pull-request-from-checkstyle": "^1.8",
         "wp-cli/i18n-command": "^2.6"
     },
     "scripts": {
