--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^27.8.0",
-    "rtlcss": "^4.1.1",
-    "sass": "^1.77.0"
+    "rtlcss": "^4.1.1"
   },
   "rtlcssConfig": {
     "options": {
