--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "wp-cli/i18n-command": "^2.6"
     },
     "scripts": {
-        "phpcs": "phpcs --standard=./phpcs.xml --extensions=php .",
+        "phpcs": "phpcs --standard=./phpcs.xml --extensions=php -s .",
         "phpcbf": "phpcbf --standard=./phpcs.xml --extensions=php .",
         "make-pot": "wp i18n make-pot . languages/interconnection.pot"
     },
