--- a/.github/actions/build-to-release-branch/action.yml
+++ b/.github/actions/build-to-release-branch/action.yml
@@ -26,7 +26,7 @@ runs:
         git config user.email "<>"
 
     - name: Check out release branch
-      uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
+      uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       with:
         ref: ${{ inputs.release_branch }}
         fetch-depth: 0
@@ -53,5 +53,5 @@ runs:
       shell: bash
       run: |
         git add -f ${{ inputs.built_asset_paths }}
-        git commit --amend -m "Build to 'release' from ${{ inputs.source_branch }}#$( git rev-parse --short ${{ inputs.source_branch }} )"
+        git commit --amend -m "Build to '${{ inputs.release_branch }}' from ${{ inputs.source_branch }}#$( git rev-parse --short ${{ inputs.source_branch }} )"
         git push origin ${{ inputs.release_branch }}:${{ inputs.release_branch }}
