--- a/.github/workflows/release-develop.yml
+++ b/.github/workflows/release-develop.yml
@@ -1,4 +1,4 @@
-name: Develop-Release
+name: Develop Release
 
 on:
   push:
@@ -11,15 +11,16 @@ concurrency:
 
 jobs:
   release:
-    name: "Update release branch"
+    name: "Update release-develop branch"
     runs-on: ubuntu-latest
     steps:
       - name: Check out
-        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
-      - uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 #v4.0.2
+      - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Merge and build
         uses: ./.github/actions/build-to-release-branch
